# python-flask-backend-template

./: LICENSE  README.md  pyproject.toml  run.py
.github/workflows/: cicd.yml
config/: config.json  init.txt
src/flask_template/: flask_template.py
src/main/: create_all_files.py  flask_template.py
src/utils/: config_json.py  create_python_files.py  file.py
